Implementacion Servicio de history, convert, find Swagger agregar crear y actualizar
